    - Military Supply: The day-night cycle now has a period of 15 minutes.
    - Military Supply: Choosing the combat starter package now gives an armor with nightvision equipment installed.
    - Military Supply: Overhauled various parts of the code.  Most of you won't care, but I did it anyways.
    - Military Supply: Solar panels, laser turrets, and circuit network have been removed.
  Gui:
    - Military Supply: Completely redesigned most of the GUIs in the scenario.
---------------------------------------------------------------------------------------------------
Version: 1.2.3
Date: 18. 12. 2020
  Changes:
    - Updated for Factorio version 1.1.
  Balancing:
    - Burner Automation technology doesn't cost any more in marathon mode--this helps to set up production quicker.
---------------------------------------------------------------------------------------------------
Version: 1.2.2
Date: 04. 07. 2020
  Changes:
    - Changed the default setting for the option of module slots in burner machines.  Now it is disabled by default.
  Bugfixes:
    - Fixed that since the electric mining drill update, the Advanced Burner Mining drill wouldn't show the proper graphics when it was mining with a fluid.  Now it's fixed, & it shows the proper graphics.
---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: 27. 06. 2020
  Changes:
    - The mod now uses a script to help automatically add Automation Science Pack as a prerequisite to any technologies that need it.
    - The recipes for Burner Oil Refinery & Burner Chemical Plant now take the same time to craft as their electric counterparts.  They take the same amount of time in normal mode & marathon mode.
  Minor Features:
    - The Air Filter recipe now has an emissions multiplier of 0.7.
    - Added better compatibility with the Simple Silicon mod & the Burner Offshore Pump mod.
  Bugfixes: