@@ -47,6 +47,7 @@ thoughts-unlock-grenade=[color=0, 0.8, 0]These grenades pack enough punch to rip
 thoughts-unlock-heavy-armor=[color=0, 0.8, 0]They want this armor to become standard-issue for all Imperial soldiers, but it's quite expensive to craft.[/color]
 thoughts-unlock-piercing-ammo=[color=0, 0.8, 0]This new ammunition should be strong enough to penetrate the Seplurian defenses.[/color]
 thoughts-unlock-red-belt=[color=0, 0.8, 0]The Empress will be glad to hear that I'm increasing the speed of my factory, won't she?[/color]
+thoughts-unlock-refined-concrete=[color=0, 0.8, 0]That's so expensive that I question if the purchase was worth it.[/color]
 thoughts-unlock-repair=[color=0, 0.8, 0]Now I can fix any damaged turrets or walls I may have.[/color]
 thoughts-unlock-smg=[color=0, 0.8, 0]These are much, much better than my old pistol.  They are standard-issue for Imperial soldiers. ... Why didn't they give one to me?[/color]
 thoughts-unlock-steel-furnace=[color=0, 0.8, 0]They said I'm doing an okay job, but I need to work faster.  With these furnaces I can double my iron plate production.[/color]
@@ -145,6 +146,7 @@ fast-inserter=Fast inserter\nFilter inserter
 grenade-bonus-1=+25% damage
 grenade-bonus-2=+35% damage
 concrete=Concrete
+refined-concrete=Refined concrete
 follower-count-bonus=+10 follower robots
 mining-prod-1=+4% mining productivity
 inserter-stack-bonus=+2 inserter stack size
