@@ -239,6 +239,7 @@ script.on_init( function()
 	add_message_to_scenario_object( mS, "thoughts-unlock-heavy-armor" )
 	add_message_to_scenario_object( mS, "thoughts-unlock-piercing-ammo" )
 	add_message_to_scenario_object( mS, "thoughts-unlock-red-belt" )
+	add_message_to_scenario_object( mS, "thoughts-unlock-refined-concrete" )
 	add_message_to_scenario_object( mS, "thoughts-unlock-repair" )
 	add_message_to_scenario_object( mS, "thoughts-unlock-smg" )
 	add_message_to_scenario_object( mS, "thoughts-unlock-steel-furnace" )
